mongodump/mongoexport log to stderr when outputting to stdout to avoid corrupting the data stream - SERVER-3112